# OpenGL_Roguelite

./: .gitignore  CMakeLists.txt  Makefile
assets/: boons.cfg  enemies.cfg
demos/one_piece_world/: Makefile  data.cpp  data.h  globals.h  globe.cpp  globe.h  hud.cpp  hud.h  journey.cpp  journey.h  main.cpp  noise.h  stars.cpp  stars.h
game/: config.h  main.cpp  renderer.cpp  renderer.h  types.h  world.cpp  world.h
